--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
             <h1>Ristorante con Fusion</h1>
             <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
           </div>
-          <div class="col-12 col-sm align-self-center">
+          <div class="col-12 col-sm-3 align-self-center">
             <img src="img/logo.png" class="img-fluid">
+          </div>
+          <div class="col-12 col-sm-3 align-self-center">
+            <div class="btn-group">
+              <a class="btn btn-primary btn-sm" role="button" href="#reserve">Reserve Table</a>
+            </div>
           </div>
       </div>
     </div>
@@ -79,8 +84,14 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+              <div class="media">
+                <div class="media-body">
+                  <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                  <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img class="d-flex mr-3 img-thumbnail align-self-center"
+                        src="img/uthappizza.png" alt="Uthappizza">
+              </div>
             </div>
         </div>
 
@@ -104,8 +115,45 @@
               </div>
             </div>
         </div>
-    </div>
+        <div class="row row-content align-items-center">
+          <div class="col-12 col-sm-8 offset-sm-2">
+            <a name="reserve"></a>
+            <div class="card">
+              <h3 class="card-header bg-primary text-white">Reserve a Table</h3>
+              <div class="card-body">
+                <div class="form-group row">
+                  <div class="col-12 col-sm-2">Number of Guests</div>
+                  <div class="col-12 col-sm-10">
+                    <input type="radio" name="guests" value="1"> 1
+                    <input type="radio" name="guests" value="2"> 2
+                    <input type="radio" name="guests" value="3"> 3
+                    <input type="radio" name="guests" value="4"> 4
+                    <input type="radio" name="guests" value="5"> 5
+                    <input type="radio" name="guests" value="6"> 6
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col-12 col-sm-2">Date and Time</div>
+                  <div class="col-12 col-sm-4">
+                    <input type="text" class="form-control" id="resDate"
+                      name="resDate" placeholder="Date">
+                  </div>
+                  <div class="col-12 col-sm-4">
+                    <input type="text" class="form-control" id="resTime"
+                      name="resTime" placeholder="Time">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col-12 col-sm-4 offset-sm-2">
+                    <button type="submit" class="btn btn-primary">
+                      Reserve</button>
+                </div>
 
+              <div>
+            </div>
+          </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="row">
