--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
           <div class="col-12 col-sm-3 align-self-center">
             <div class="btn-group">
               <a class="btn btn-block nav-link btn-warning" role="button"
-                data-toggle="tooltip" data-html="true"
-                title="Or call us at <br><strong>+852 12345678</strong>"
-                data-placement="bottom" href="#reserve">Reserve Table
+              data-toggle="modal" data-target="#reserveModal">
+                <span class="fa">Reserve Table</span>
               </a>
             </div>
+
           </div>
       </div>
     </div>
@@ -160,46 +160,62 @@
 
 
 
-
-        <div class="row row-content align-items-center">
-          <div class="col-12 col-sm-8 offset-sm-2">
-            <a name="reserve"></a>
-            <div class="card">
-              <h3 class="card-header bg-primary text-white">Reserve a Table</h3>
-              <div class="card-body">
-                <div class="form-group row">
-                  <div class="col-12 col-sm-2">Number of Guests</div>
-                  <div class="col-12 col-sm-10">
-                    <input type="radio" name="guests" value="1"> 1
-                    <input type="radio" name="guests" value="2"> 2
-                    <input type="radio" name="guests" value="3"> 3
-                    <input type="radio" name="guests" value="4"> 4
-                    <input type="radio" name="guests" value="5"> 5
-                    <input type="radio" name="guests" value="6"> 6
-                  </div>
+      <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3 class="modal-title">Reserve a Table</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group row">
+                <div class="col-12 col-sm-2">Number of Guests</div>
+                <div class="col-12 col-sm-10">
+                  <input type="radio" name="guests" value="1"> 1
+                  <input type="radio" name="guests" value="2"> 2
+                  <input type="radio" name="guests" value="3"> 3
+                  <input type="radio" name="guests" value="4"> 4
+                  <input type="radio" name="guests" value="5"> 5
+                  <input type="radio" name="guests" value="6"> 6
                 </div>
-                <div class="form-group row">
-                  <div class="col-12 col-sm-2">Date and Time</div>
-                  <div class="col-12 col-sm-4">
-                    <input type="text" class="form-control" id="resDate"
-                      name="resDate" placeholder="Date">
-                  </div>
-                  <div class="col-12 col-sm-4">
-                    <input tyagumbepe="text" class="form-control" id="resTime"
-                      name="resTime" placeholder="Time">
-                  </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-12 col-sm-2">Section:</div>
+                <div class="btn-group btn-group-toggle">
+                  <label class="btn btn-success active">
+                    <input type="radio" name="section" id="nonsmoking"
+                      autocomplete="off" checked>Non-Smoking
+                  </label>
+                  <label class="btn btn-danger">
+                    <input type="radio" name="section" id="smoking"
+                      autocomplete="off">Smoking
+                  </label>
                 </div>
-                <div class="form-group row">
-                  <div class="col-12 col-sm-4 offset-sm-2">
-                    <button type="submit" class="btn btn-primary">
-                      Reserve</button>
+              </div>
+              <div class="form-group row">
+                <div class="col-12 col-sm-2">Date and Time</div>
+                <div class="col-12 col-sm-4">
+                  <input type="text" class="form-control" id="resDate"
+                    name="resDate" placeholder="Date">
                 </div>
-
-              <div>
+                <div class="col-12 col-sm-4">
+                  <input tyagumbepe="text" class="form-control" id="resTime"
+                    name="resTime" placeholder="Time">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-12 col-sm-4 offset-sm-2">
+                  <button type="button" class="btn btn-secondary ml-auto"
+                    data-dismiss="modal">Cancel</button>
+                  <button type="submit" class="btn btn-primary">
+                    Reserve</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-    </div>
+      </div>
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -258,11 +274,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-    </script>
 </body>
 
 </html>
